<resources>
    <string name="app_name">健康不用等</string>

    <!-- Strings related to login -->
    <string name="prompt_email">电子邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_rpassword">确认密码</string>
    <string name="prompt_card">诊疗卡号（10位）</string>
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_gender">性别（男/女）</string>
    <string name="prompt_age">年龄</string>
    <string name="prompt_realname">姓名</string>
    <string name="prompt_height">身高(·cm)</string>
    <string name="prompt_weight">体重(·kg)</string>
    <string name="prompt_temp">体温(·℃)</string>
    <string name="prompt_breath">呼吸(·pm)</string>
    <string name="prompt_pulse">脉搏(·bpm)</string>
    <string name="prompt_blsugar">血糖(·mmol/L)</string>
    <string name="prompt_pressure">血压(收缩/舒张·mmHg)</string>
    <string name="prompt_pressure_c">收缩压(·mmHg)</string>
    <string name="prompt_pressure_r">舒张压(·mmHg)</string>
    <string name="prompt_more">病情描述（≤200字）</string>
    <string name="action_sign_in">登录</string>
    <string name="action_new_user">新用户</string>
    <string name="action_sign_up">注册</string>
    <string name="action_reset">下一步</string>
    <string name="action_sign_in_short">立即登录</string>
    <string name="error_invalid_email">格式不正确</string>
    <string name="error_invalid_password">密码长度有误</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_incorrect_rpassword">两次输入的密码不一致</string>
    <string name="error_field_required">请填写此字段</string>
    <string name="permission_rationale">"抱歉，权限指示需要完善电子邮箱信息"</string>
    <string name="agreement">同意用户服务条款</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_about">关于</string>
    <string name="title">我的诊疗卡</string>
    <string name="title_1">预约挂号</string>
    <string name="title_2">查看资料</string>
    <string name="title_3">查看体征</string>
    <string name="text_1">在线预约更省心，现在开始挂号。</string>
    <string name="text_2">完善个人基本资料才可以预约挂号哦~</string>
    <string name="text_3">提前录入体征，就诊更快捷。</string>
    <string name="noMore">&gt;.&lt;已经到底了...</string>
    <!-- Strings related to Settings -->
    <string name="name">用户</string>
    <string name="eml">someone@example.com</string>

    <!-- Example General settings -->

    <string name="pref_header_general">帐户设置</string>

    <string name="pref_title_social_recommendations">允许别人查看我</string>
    <string name="pref_description_social_recommendations">允许陌生人和好友查看我的基本信息</string>

    <string name="pref_title_display_name">显示名</string>
    <string name="pref_default_display_name">当前未设置昵称</string>

    <string name="pref_title_add_friends_to_messages">同步我的帐户</string>
    <string-array name="pref_example_list_titles">
        <item>总是</item>
        <item>发生更改时</item>
        <item>从不</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">刷新模式</string>

    <string name="pref_title_sync_frequency">频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>手动</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>2分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>30分钟</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>-1</item>
        <item>0.5</item>
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">其他</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">消息提醒</string>

    <string name="pref_title_new_message_notifications">启用通知</string>

    <string name="pref_title_ringtone">音效</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">振动</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>

    <string name="action_settings">更多</string>
    <string name="action_quit">退出/切换用户</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">直接进入应用</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
